# stoltzfus-gambling

./: CHANGES.md  CITATION  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: gambling_metrics.tex  gambling_metrics.toc  gambling_metrics_pres.tex  refs.bib  task_paper.py
src/gambling_metrics/: __init__.py  config.py
src/gambling_metrics/analysis/: model.py  task_analysis.py
src/gambling_metrics/data/: data.csv
src/gambling_metrics/data_management/: __init__.py  clean_data.py  data_info.yaml  task_data_management.py
src/gambling_metrics/final/: __init__.py  plot.py  task_final.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: data_fixture.csv  test_clean_data.py
