[metadata]
name = gambling_metrics
description = Identification and the Sunk Cost Fallacy in Empirical Research: An Application with Difference-in-Difference
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jstolt3/gambling_metrics
author = Jacob Stoltzfus
author_email = s6jastol@uni-bonn.de
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/jstolt3/gambling_metrics
    Documentation = https://github.com/jstolt3/gambling_metrics
    Github = https://github.com/jstolt3/gambling_metrics
    Tracker = https://github.com/jstolt3/gambling_metrics/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/gambling_metrics/_version.py
